--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
             </div>
             <div class="grid-column span-1"></div>
             <div class="grid-column">
-                <p class="h2 mb3 heading-text-lh">A Senior UX Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
+                <p class="h2 mb4 heading-text-lh">A Senior UX Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
                 <p class="h2 heading-text-lh">I'm passionate about user-first, evidence-based&nbsp;design.</p>
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
@@ -137,7 +137,7 @@ layout: default
             <div class="grid-column span-1"></div>
             <div class="grid-column">
                 <p class="mb2">I love digging into design work that's backed by research, makes a large business impact, and begins and ends with the user. I'm also interested in leading and teaching other&nbsp;designers.</p>
-                <p class="mb2">On the side, I enjoy working on projects like <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page&nbsp;templates.</p>
+                <p class="mb2">On the side, I enjoy working on projects like <a class="link" href="https://uxtools.co/" target="_blank">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page&nbsp;templates.</p>
                 <p class="mb0">When I'm not designing, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
             </div>
         </div>
