--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
             </div>
             <div class="grid-column span-1"></div>
             <div class="grid-column">
-                <p class="h2 mb4 heading-text-lh">A Senior UX Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
+                <p class="h2 mb4 heading-text-lh">A Senior Product Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
                 <p class="h2 heading-text-lh">I'm passionate about user-first, evidence-based&nbsp;design.</p>
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
