Add Google Optimize

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -7,3 +7,6 @@
 
   gtag('config', 'G-P7JH7T9ND2');
 </script>
+
+<!-- Google Optimize -->
+<script src="https://www.googleoptimize.com/optimize.js?id=OPT-KDR35K7"></script>
