Google Optimize in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,8 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
         <meta name="monetization" content="$ilp.uphold.com/xkmwLrAJZdDH">
+        
+        <!-- Google Optimize -->
+        <script src="https://www.googleoptimize.com/optimize.js?id=OPT-KDR35K7"></script>
 
     </head>
