Changing to simple landing page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,18 +3,31 @@
         <!-- Meta -->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        {%- seo -%}
-        <meta property="og:type" content="website" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.7.1 -->
+        <title>Jordan Bowman | Senior UX Designer &amp; Researcher</title>
+        <meta name="generator" content="Jekyll v4.2.0">
+        <meta property="og:title" content="Jordan Bowman">
+        <meta property="og:locale" content="en_US">
+        <meta name="description" content="I’m a Senior Product Designer and Researcher with 8+ years constructing digital experiences. I’m passionate about user-first, evidence-based design.">
+        <meta property="og:description" content="I’m a Senior Product Designer and Researcher with 8+ years constructing digital experiences. I’m passionate about user-first, evidence-based design.">
+        <link rel="canonical" href="https://jrdnbwmn.com/">
+        <meta property="og:url" content="https://jrdnbwmn.com/">
+        <meta property="og:site_name" content="Jordan Bowman">
+        <meta name="twitter:card" content="summary">
+        <meta property="twitter:title" content="Jordan Bowman">
+        <meta name="twitter:site" content="@jrdnbwmn">
+        <meta name="twitter:creator" content="@jrdnbwmn">
+        <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=UA-32531907-4&amp;l=dataLayer&amp;cx=c"></script><script type="application/ld+json">
+        {"@type":"WebSite","headline":"Jordan Bowman","sameAs":["https://twitter.com/jrdnbwmn"],"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://jrdnbwmn.com/img/share.jpg"}},"url":"https://jrdnbwmn.com/","description":"I’m a Senior Product Designer and Researcher with 8+ years constructing digital experiences. I’m passionate about user-first, evidence-based design.","name":"Jordan Bowman","@context":"https://schema.org"}</script>
+        <!-- End Jekyll SEO tag -->
+        <meta property="og:type" content="website">
 
         <!-- The compiled CSS file -->
-        <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}"> 
+        <link rel="stylesheet" href="/main.css"> 
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&amp;display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.typekit.net/vcb8jhq.css">
 
         <!-- Favicons -->
@@ -23,8 +36,5 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
         <meta name="monetization" content="$ilp.uphold.com/xkmwLrAJZdDH">
-        
-        <!-- Google Optimize -->
-        <script src="https://www.googleoptimize.com/optimize.js?id=OPT-KDR35K7"></script>
 
     </head>
