--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,12 @@
-<!doctype html>
-<html lang="en-us">
-
-    {%- include head.html -%}
-
-    <body class="dark-body has-animations">
-
-        {{ content }}
-
-        {%- include foot.html -%}
-        
-    </body>
-
+<!DOCTYPE html>
+<html lang="{{ site.lang | default: "en-US" }}">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>{{ page.title }} - {{ site.title }}</title>
+    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  </head>
+  <body >
+    {{ content }}
+  </body>
 </html>
