--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
             {%- include nav.html -%}
 
-            <div class="grow">
+            <div class="grow overflow-auto">
                 {{ content }}
             </div>
 
