--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -6,6 +6,8 @@ layout: default
     <div>{{ page.image-html }}</div>
     
     <h4 class="text-2xl">{{ page.title }}</h4>
+
+    <a href="{{ page.link }}" target="_blank">Website</a>
     
     {{ content }}
 </div>
