Add bookmarks collection

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -35,7 +35,7 @@
                     <div class="grow">Stack</div>
                 </div>
             </a>
-            <a class="block rounded-lg p-3 border border-transparent hover:border-slate-400 hover:bg-slate-50 duration-200 mb-1" href="/">
+            <a class="block rounded-lg p-3 border border-transparent hover:border-slate-400 hover:bg-slate-50 duration-200 mb-1" href="/bookmarks">
                 <div class="flex">
                     <div class="basis-9">
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
