--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -1,13 +1,18 @@
 ---
-layout: default
+layout: stack
 ---
 
-<div class="p-10">
+<div class="container mx-auto max-w-3xl p-10">
+    <div class="pb-5">
+        <a href="/stack/">← Back</a>
+    </div>
+
     <div>{{ page.image-html }}</div>
-    
+
     <h4 class="text-2xl">{{ page.title }}</h4>
 
     <a href="{{ page.link }}" target="_blank">Website</a>
-    
+
     {{ content }}
 </div>
+
