--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,10 +11,10 @@
     <!-- The compiled CSS file -->
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
-    <!-- Figtree -->
+    <!-- Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Figtree&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
     <!-- Preload fonts
     <link rel="preload" as="font" href="/fonts/SpaceGrotesk-Bold.woff2" type="font/woff2" crossorigin="anonymous">
