Work on inspiration

--- a/_layouts/inspiration.html
+++ b/_layouts/inspiration.html
@@ -12,6 +12,8 @@ layout: stack
     <h4 class="text-2xl">{{ page.title }}</h4>
 
     <a href="{{ page.link }}" target="_blank">Website</a>
+    
+    <img src="{{ page.image }}" alt="{{ page.title }}">
 
     {{ content }}
 </div>
