--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -65,14 +65,15 @@
                     <!-- <div class="grow">Labs</div> -->
                 </div>
             </a>
-            <a class="block rounded-lg p-3 border border-transparent hover:border-slate-400 hover:bg-slate-50 duration-200" href="/inspiration/">
+            <a class="block rounded-lg p-3 border border-transparent hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stash/">
                 <div class="flex">
                     <div class="basis-9">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 7.125C2.25 6.504 2.754 6 3.375 6h6c.621 0 1.125.504 1.125 1.125v3.75c0 .621-.504 1.125-1.125 1.125h-6a1.125 1.125 0 0 1-1.125-1.125v-3.75ZM14.25 8.625c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v8.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 0 1-1.125-1.125v-8.25ZM3.75 16.125c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v2.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 0 1-1.125-1.125v-2.25Z" />
                         </svg>
+
                     </div>
-                    <div class="grow">Craft</div>
+                    <div class="grow">Stash</div>
                 </div>
             </a>
             <a class="block rounded-lg p-3 border border-transparent hover:border-slate-400 hover:bg-slate-50 duration-200" href="/">
