--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container mx-auto max-w-3xl p-10">
     <div class="pb-5">
-        <a href="/stack/">← Back</a>
+        <a href="/tools/">← Back</a>
     </div>
 
     <div>{{ page.image-html }}</div>
