Change to pinboard

--- a/_includes/nav-app.html
+++ b/_includes/nav-app.html
@@ -105,9 +105,9 @@
             </a>
             {% endif %}
             
-            <!-- Stash -->
-            {% if page.active == "stash" %}
-            <a class="block rounded-lg p-3 border border-slate-400 bg-slate-50 duration-200 mb-1" href="/stash/">
+            <!-- Pinboard -->
+            {% if page.active == "pinboard" %}
+            <a class="block rounded-lg p-3 border border-slate-400 bg-slate-50 duration-200 mb-1" href="/pinboard/">
                 <div class="flex">
                     <div class="basis-9">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -115,11 +115,11 @@
                         </svg>
             
                     </div>
-                    <div class="grow">Stash</div>
+                    <div class="grow">Pinboard</div>
                 </div>
             </a>
             {% else %}
-            <a class="block rounded-lg p-3 border border-transparent hover:border-slate-400 hover:bg-slate-50 duration-200 mb-1" href="/stash/">
+            <a class="block rounded-lg p-3 border border-transparent hover:border-slate-400 hover:bg-slate-50 duration-200 mb-1" href="/pinboard/">
                 <div class="flex">
                     <div class="basis-9">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -127,7 +127,7 @@
                         </svg>
             
                     </div>
-                    <div class="grow">Stash</div>
+                    <div class="grow">Pinboard</div>
                 </div>
             </a>
             {% endif %}
