--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
                 <li><a href="/projects/">Projects</a></li>
                 <li><a href="/workbooks/">Workbooks</a></li>
                 <li><a href="/tools/">Tools</a></li>
-                <li><a href="/stash/">Stash</a></li>
+                <li><a href="/pinboard/">Pinboard</a></li>
             </ul>
         </nav>
     </div>
