Add Pirsch Analytics

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,3 +1,4 @@
-<!-- Simple Analytics -->
-<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+<!-- Pirsch Analytics -->
+<script defer src="https://api.pirsch.io/pa.js"
+    id="pianjs"
+    data-code="7swK8rYrie1acYUsYabwjh5LrnmDevE0"></script>
