--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,12 @@
 <div class="container mx-auto px-4 py-12 max-w-6xl">
     <div class="flex items-center justify-between items-end">
         <a class="flex" href="/">
-            <div class="basis-9 relative top-0.5">
+            <div class="basis-9 relative top-0.5 mr-2">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
                 </svg>
             </div>
-            <div class="font-display font-semibold text-xl" style="width: 170px">Jordan Bowman</div>
+            <div class="font-display font-semibold text-xl" style="min-width: 220px">Jordan Bowman</div>
         </a>
         <nav>
             <ul class="flex items-center gap-x-8">
@@ -18,3 +18,4 @@
         </nav>
     </div>
 </div>
+    
