--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,22 @@
 <!doctype html>
 <html lang="en-us">
+
     {%- include head.html -%}
+
     <body>
-        <div>
+
+        <div class="flex h-screen">
+
             {%- include nav.html -%}
-            {{ content }}
+
+            <div class="grow overflow-auto">
+                {{ content }}
+            </div>
+
         </div>
+
         {%- include foot.html -%}
+        
     </body>
+
 </html>
