Switch Pirsch to head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,4 +47,7 @@
 
     {%- feed_meta -%}
 
+    <!-- Pirsch Analytics -->
+    <script defer src="https://api.pirsch.io/pa.js" id="pianjs" data-code="7swK8rYrie1acYUsYabwjh5LrnmDevE0"></script>
+
 </head>
