More work on new homepage

--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -5,7 +5,7 @@ layout: default-color
 <!doctype html>
 <html lang="en-us">
     {%- include head.html -%}
-    <body>
+    <body class="text-gray-800">
         <div>
             {%- include nav.html -%}
             
