--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -3,7 +3,7 @@
 
     {%- include head.html -%}
 
-    <body style="background-color: #f9f8f4;">
+    <body class="text-gray-800" style="background-color: #f9f8f4;">
 
         <div>
 
