Work on new home

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,11 @@
 ---
 
 html {
-	font-size: 23px;
+	font-size: 18px;
+
+	@media screen and (min-width: 1300px) {
+		font-size: 23px;
+	}
 }
 
 @tailwind base;
