--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,9 @@
     <!-- The compiled CSS file -->
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
+    <!-- The JS file -->
+    <script type="text/javascript" src="{{ "/assets/js/main.js" | relative_url }}"></script>
+
     <!-- Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
