--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,21 +1,37 @@
-<div class="container mx-auto px-4 py-12 max-w-6xl">
-    <div class="flex items-center justify-between items-end">
-        <a class="flex" href="/">
-            <div class="basis-9 relative top-0.5 mr-2">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
-                </svg>
-            </div>
-            <div class="font-display font-semibold text-xl" style="min-width: 220px">Jordan Bowman</div>
-        </a>
-        <nav>
-            <ul class="flex items-center gap-x-8">
-                <li><a href="/projects/">Projects</a></li>
-                <li><a href="/workbooks/">Workbooks</a></li>
-                <li><a href="/tools/">Tools</a></li>
-                <li><a href="/pinboard/">Pinboard</a></li>
-            </ul>
-        </nav>
+<!-- Header -->
+<header>
+    <div class="px-4 w-full flex content-center">
+        <div class="border-b-2 border-solid border-neutral-700 py-5 w-full">
+            <nav>
+                <ul class="flex items-center list-none">
+                    <li class="mr-10"><a href="/">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="icon icon-tabler icons-tabler-outline icon-tabler-fingerprint">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M18.9 7a8 8 0 0 1 1.1 5v1a6 6 0 0 0 .8 3" />
+                                <path d="M8 11a4 4 0 0 1 8 0v1a10 10 0 0 0 2 6" />
+                                <path d="M12 11v2a14 14 0 0 0 2.5 8" />
+                                <path d="M8 15a18 18 0 0 0 1.8 6" />
+                                <path d="M4.9 19a22 22 0 0 1 -.9 -7v-1a8 8 0 0 1 12 -6.95" />
+                            </svg>
+                        </a></li>
+                    <li class="hidden sm:list-item mr-10"><a class="link-underline" href="/projects">Projects</a></li>
+                    <li class="hidden sm:list-item"><a class="link-underline" href="/about">About</a></li>
+                    <li class="sm:hidden ml-auto">
+                        <div class="mobile-nav-toggle z-20">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </li>
+                    <li class="hidden sm:list-item ml-auto"><a class="link-underline"
+                            href="https://savvycal.com/jordanbowman/meeting">Let's chat ↗</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-</div>
+</header>
     
